--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-OPENAI_API="g4a-ZzapTUfvDPGhBEJY1Tnh33SG97tBwBFeM43"
-OPENAI_BASE_URL="https://api.gpt4-all.xyz/v1"
+OPENAI_API="xxxxxxxx"
+OPENAI_BASE_URL="xxxxxx"
 # OPENAI_MODEL="gpt-3.5-turbo"
 OPENAI_MODEL="gpt-4-1106-preview"
-OPENAI_MAX_TOKEN=2000
