--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 OPENAI_API="xxxxxxxx"
-OPENAI_BASE_URL="xxxxxx"
+OPENAI_BASE_URL="https://api.openai.com/v1" # or change using openai compatible base url 
 # OPENAI_MODEL="gpt-3.5-turbo"
-OPENAI_MODEL="gpt-4-1106-preview"
+OPENAI_MODEL="gpt-4-1106-preview" 
